--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "repository": "github:Maarrk/shklanky",
   "scripts": {
+    "dev": "web-ext run",
+    "dev:en": "web-ext run --pref=intl.locale.requested=en",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint ."
   },
@@ -18,6 +20,7 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-html": "^6.1.1",
     "eslint-plugin-prettier": "^3.3.1",
-    "prettier": "2.2.1"
+    "prettier": "2.2.1",
+    "web-ext": "^5.5.0"
   }
 }
